--- a/src/app/fruits/home/home.component.html
+++ b/src/app/fruits/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row mt-2">
+        <div class="col col-md-4 offset-md-4">
+          <a class="btn btn-primary" routerLink="/fruits/create">Create</a>
+        </div>
+      </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of allFruits">
+          <th scope="row">{{ item.id }}</th>
+          <td>{{ item.name }}</td>
+          <td>{{ item.quantity }}</td>
+          <td>{{ item.price }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
